2. Design Patterns/1. Creational/Factory/Examples/1. MyPizza/Bad/MyPizza_Bad/VegetarianPizza.cs
namespace MyPizza_Bad
{
    internal class VegetarianPizza : Pizza
    {
    }
}